distribution/istio-resources/kubeflow-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeflow-gateway
  namespace: kubeflow
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    #    - kubeflow.my-cluster.my-domain.com
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
    # Upgrade HTTP to HTTPS
    tls:
      #httpsRedirect: true
      httpsRedirect: false
  - hosts:
    #    - kubeflow.my-cluster.my-domain.com
    - '*'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
      #mode: SIMPLE
      #credentialName: kubeflow-ingressgateway-certs
